# x-wing

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: handler.rs  main.rs
server/src/public/: styles.css
server/templates/: app.html
server/templates/pages/: 404.html  index.html
web/: Cargo.toml
web/src/: lib.rs
