[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1"
askama = "0.12.1"
hyper-router = "0.5.0"
serde_json = "1.0.111"
hyper = {version = "1.1.0", features = ["server"]}
hyper-util = {version = "0.1.2", features = ["full"]}
tokio = {version = "1.35.1", features = ["full"]}
