[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"

[dependencies.web-sys]
version = "0.3.67"
features = [
    'Window',
    'Request',
    'RequestInit',
    'Navigator',
    'MediaDevices',
    'BlobEvent',
    'Blob',
    'FormData',
    'Headers',
    'console',
    'MediaStream',
    'MediaStreamConstraints',
    'MediaRecorder',
]
